# CourseRecommendationSystem

./: .gitignore  README.md  pyproject.toml
notes/: notes.md  outline.md  outline2.md  user-test.md
resources/: modules.dbml
src/backend/: db_models.py  embeddings_2d_projection.ipynb  extraction_schema.py  module_filter.py  module_ranker.py  projection.csv  rank_modules.py  routes.py  student_input_extraction.py  test.ipynb  topic_mapper.py
src/course_recommender/: extraction.py  extraction_schema.py  module_filter.py  rank_modules.py  student_input_extraction.py  topic_mapper.py
src/course_recommender/db/: models.py
src/evaluation/: convert_prereq_to_prodigy_format.py  patterns.jsonl  prereq_extraction_results.ipynb  validate_prereq_extraction.py
src/evaluation/prerequisite_mapping/: convert_prereq_to_prodigy_format.py  module_prerequisites.jsonl  prereq_extraction_results.ipynb  validate_prereq_extraction.py
src/evaluation/student_input_evaluation/: 01_generate_student_input_test_set.py  02_generate_student_input_validation_set.py  03_evaluate_student_input_extraction.py  add_art_input.py  artificial_student_input.csv  evaluation_set.json  (+7 more)
src/frontend/: package-lock.json
src/scripts/: 00__execute_all.sh  00_build_db.py  01_create_module_embeddings.py  01_create_topic_embeddings.py  01_organisation_scraper.py  01_scrape_organisations.py  02_label_organisations.py  02_organisation_categoriser.py  03_prerequisites_extraction.py  04_map_module_prerequisites.py  04_map_prerequisites.py  manual_org_mapping.json  pipeline.ipynb
src/utils/: crud.py
(+24 files in other folders)
